Major Dutch translation updates, thanks to Gandyman.
Catalan translation updates by Jaume Badiella.
Converted all core modules to use the new WebminCore perl module instead of web-lib.pl. This significantly improves memory use and load time in code that uses functions from multiple modules, asssuming they have all been converted.
---- Changes since 1.470 ----
Catalan translation updates by Jaume Badiella.
Added an UTF-8 encoding of the Russian translation, thanks to shavlukov@gmail.com.
French translation updates by ButterflyOfFire.
Dutch translation updates by Gandyman.
Dramatically improved Webmin's search function, to include links to pages that help or UI text comes from. Also changed the layout of results to a more Webmin-ish style.
---- Changes since 1.480 ----
Catalan translation updates by Jaume Badiella.
Dutch translation updates, thanks to Gandyman.
Beginnings of a Basque translation, thanks to Mireia Lezea.
---- Changes since 1.500 ----
Czech translation updates, thanks to Karel Hudan.
The Webmin RPM now preserves the /etc/webmin directory when un-installed and then re-installed.
Added a robots.txt file to block indexing of Webmin by search engines.
The Webmin search box can now be disabled in the Webmin Users module, under "Permissions for all modules".
Brazillian Portuguese translation updates for several modules, thanks to Djavan Fagundes.
---- Changes since 1.510 ----
Dutch translation updates, thanks to Gandyman.
Polish translation updates, thanks to Dariusz Dêbowski.
---- Changes since 1.520 ----
Catalan translation updates by Jaume Badiella.
---- Changes since 1.530 ----
Sped up the loading of language files by pre-caching them in memory when Webmin is started, and not performing sub-string substitutions in most modules.
Added support for Pardus Linux, thanks to Kaan Ozdincer.
Major Dutch updates, thanks to Gandyman.
Majoe French translation update, thanks to ButterflyOfFire.